# agent-tasks

./: .dockerignore  .env.example  .gitignore  .relay.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.migrate  Makefile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
.github/: pull_request_template.md
.planforge/: AGENTS.md  CLAUDE.md  Dockerfile.dev  Makefile  PROJECT.md  architecture-overview.md  delivery-plan.md  docker-compose.dev.yml  intake-questionnaire.md  planforge-index.json  project-charter.md
adr/: 0001-github-oauth-primary-login.md  0002-project-sync-from-github.md  0003-agent-token-scope-model.md  0004-workflow-engine-vs-hardcoded-rules.md  0005-modular-monolith-as-starting-architecture.md  0006-relational-database-as-primary-store.md  0007-integrations-behind-internal-boundaries.md  0008-mcp-verb-oriented-workflow-surface.md  0010-solo-mode-and-auto-merge.md
backend/: Dockerfile  eslint.config.mjs  package.json  tsconfig.json  vitest.config.ts
cli/: CHANGELOG.md  README.md  package.json
diagrams/: architecture-overview.mmd  domain-overview.mmd  sequence-agent-create-claim.mmd  sequence-github-oauth-sync.mmd  sequence-review-deploy.mmd
docs/: .webhook-test  agent-workflow.md  api-contract.md  architecture.md  artifacts.md  attachments.md  backlog.md  deploy-verify-strategy.md  development.md  (+24 more)
scaffold/: AI_CONTEXT.md  README.md  pyproject.toml
scaffold/.github/workflows/: ci.yml
scaffold/docs/: api-design.md  architecture.md  ways-of-working.md
scaffold/docs/adrs/: 0001-architecture.md
(+442 files in other folders)
